knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Map_Member_Placeholder__c/pqcrush__Map_Member_Placeholder__c.object-meta.xml
<CustomObject>
    <label>Map Member Placeholder</label>
    <nameField>
        <label>Map Member Place Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Map Member Placeholders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>