knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Map_Member_Placeholder__c/fields/pqcrush__Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>pqcrush__Account_Plan__c</referenceTo>
    <relationshipLabel>Map Member Placeholders</relationshipLabel>
    <relationshipName>Map_Member_Placeholders</relationshipName>
    <type>Lookup</type>
</CustomField>