knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Map_Member_Placeholder__c/fields/pqcrush__Description__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>