knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Map_Member_Placeholder__c/fields/pqcrush__Label__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>